# FreeTimeCraft

./: HOG_descriptor.ipynb  README.md
CValgorithms/: .Canny_Edge_detector.ipynb.swp  .Gaussian_Smoothing.ipynb.swp  Gradient_Decent.ipynb  Harris_Corner_Detector.ipynb  MedianFlow_tracker.ipynb  Shi-Tomasi_Corner_Detector.ipynb  Watershed Algorithm_Segmentation.ipynb
CValgorithms/.ipynb_checkpoints/: Canny_Edge_detector-checkpoint.ipynb  Gradient_Decent-checkpoint.ipynb  HOG_descriptor-checkpoint.ipynb  MedianFlow_tracker-checkpoint.ipynb  MyGradientFilter-checkpoint.ipynb  Shaar_Edge_Detector-checkpoint.ipynb  Sobel_edge_detector-checkpoint.ipynb
CValgorithms/General/: Gaussian_Smoothing.ipynb  HOG+SVM_template_matching.ipynb  Laplacian_Edge_Detector.ipynb  Laplacian_Of_Gaussian_Corner_Detector.ipynb  Selective_Search.ipynb  Sobel_Edge_detector.ipynb
CValgorithms/SelfDrivingCar/: ContourApproximation.ipynb  Identifier.ipynb  Interpolation.ipynb
DataScience/1-Data Analysis with Pandas/: HWDataAnalizingUCIAdult.ipynb
DataScience/2-Data Visualization with Pandas/: TelecomChurn.ipynb
DataScience/NeuralNetwork(Perseptron)/: MyOwnImages.ipynb  NeuralNetwork.ipynb  OwnDataSet.ipynb
DataScience/Pandas/: TelecomOperator.ipynb
DataScience/PyTorch/: LinearRegression.py  LogisticRegression.py
DataScience/Tensorflow/: LinearRegression_tf_v1.py  LinearRegression_tf_v2.py
EasyPeasyChallanges/: Challange1.ipynb
EasyPeasyChallanges/.ipynb_checkpoints/: Challange1-checkpoint.ipynb
Images/Planes_Map/: 1.tif  2.tif  3.tif  4.tif  57.tif
NeuralNetwork(Perseptron)/: openNN.ipynb
RunwayDetection/: SegmentSkyRegion.ipynb
SelfDrivingCar/: README.md  Segmentation.ipynb  TestOpenCV.ipynb
TestArea/.ipynb_checkpoints/: Numpy-checkpoint.ipynb
Testing/: Closure.py  DataStructures.py  Decorators.py  Encapsulation.py  Numpy.ipynb  Strings.py  Zip-Map.py
TurtorialFields/: Untitled.ipynb
UsefulInfo/: tasks.json
UsefulInfo/VSCode/: launch.json
_SimpleProjects/FFmpegReader/: CMakeLists.txt  main.cpp
_SimpleProjects/FFmpegReader/VideoReader/: FlowCapture.cpp  FlowCapture.h
_SimpleProjects/HeaterLauncher/: CMakeLists.txt  MainHeatHandler.cpp  MainHeatHandler.h  main.cpp
_SimpleProjects/HeaterLauncher/GPIO/: GPIOExecuter.cpp  GPIOExecuter.h
_SimpleProjects/HeaterLauncher/I2C/: TemperatureController.cpp  TemperatureController.h
_SimpleProjects/SatteliteHeightPredictor/: DataSetMaker.py  HeightEstimator.py  PlotLosses.py  main.py
_SimpleProjects/TemperatureDetector/: CMakeLists.txt
_SimpleProjects/TemperatureDetector/TemperatureExec/: TemperatureCalculator.cpp  TemperatureCalculator.h  main.cpp
_SimpleProjects/WebScrapping/: Articles.txt  DataCleaning.py  ParserLabelMe3.0.py  utils.py
_WorkScripts/: listingGenerator.py  parserLabelMe3.0.py  simplePlot.py
СomputerVisionAlgorithm/: Canny_edge_detector.ipynb  Gaussian_Smoothing.ipynb  HOG+SVM_template_matching.ipynb  HOG_descriptor.ipynb  Laplacian_Edge_Detector.ipynb  Sobel_edge_detector.ipynb
СomputerVisionAlgorithm/.ipynb_checkpoints/: Canny_edge_detector-checkpoint.ipynb  Gaussian_Smoothing-checkpoint.ipynb  (+6 more)
(+62 files in other folders)
